--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -254,7 +254,9 @@
         <div class="sidebar-header">
             <h2><i class="fas fa-user-shield"></i> Admin Panel</h2>
         </div>
-        <ul>
+        <ul>         
+               <li><a href="/admin/dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+
             <li><a href="/admin/users"><i class="fas fa-users"></i> Users</a></li>
             <li><a href="/admin/categories"><i class="fas fa-tags"></i> Categories</a></li>
             <li><a href="/admin/languages"><i class="fas fa-globe"></i> Languages</a></li>
